# ChatGPT_Clone

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  app.py  run.py  test.db
backend/api/: auth_api.py  chat_with_llm_api.py
backend/chroma_db/: chroma.sqlite3
backend/core/: dependencies.py  security.py  settings.py
backend/database/: connection.py
backend/db_schemas/: db_tables.py
backend/pydantic_schemas/: LLM_output_schema.py  auth_schemas.py  chat_schema.py  conversation_schema.py  file_upload_schemas.py
backend/repositories/: auth_repo.py  conversation_repository.py  document_repository.py  long_term_memory_repo.py  message_repository.py  summary_repository.py
backend/services/: auth_services.py  chat_services.py  context_builder.py  conversation_service.py  document_service.py  embedding_services.py  groq_services.py  long_term_memory_service.py  memory_service.py  summary_service.py  vector_store_service.py
backend/utils/: groq_llm.py
frontend/: app.py
